--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/antd/3.16.3/antd.min.css" />    
+    <link rel="stylesheet" href="https://unpkg.com/react-table@latest/react-table.css"/>
     <title>DTRA Intelligence Tool</title>
     <style>
         html, body {
